# geolocation_search

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
configuration/: geolocation.conf
geolocation_db/: clean_databse.sql  setup_database.sql
geolocation_search_lib/: CMakeLists.txt  README  geolocation_client.cpp  geolocation_configuration.cpp  geolocation_search.cpp  geolocation_search_factory.cpp  postgresql_client.cpp
geolocation_search_lib/include/: databse_client_interface.hpp  geolocation.hpp  geolocation_client.hpp  geolocation_client_interface.hpp  geolocation_configuration.hpp  geolocation_search.hpp  geolocation_search_factory.hpp  null_databse.hpp  postgresql_client.hpp
geolocation_search_lib/tests/: CMakeLists.txt  database_client_mock.hpp  geolocation_client_mock.hpp  geolocation_client_tests.cpp  geolocation_search_client_tests.cpp  geolocation_search_tests.cpp  http_test_server.cpp  http_test_server.hpp  postgresql_client_tests.cpp
